<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="capstone.tim.aireal.ui.home.homeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="capstone.tim.aireal.ui.keranjang.keranjangFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_keranjang" />

    <fragment
        android:id="@+id/navigation_shop"
        android:name="capstone.tim.aireal.ui.toko.TokoFragment"
        android:label="@string/title_shop"
        tools:layout="@layout/fragment_toko" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="capstone.tim.aireal.ui.akun.AkunFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_akun" />

</navigation>