<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".ui.akun.AkunFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="137dp"
        android:layout_height="113dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/profile"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />


    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="101dp"
        android:layout_height="37dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <View
        android:id="@+id/backgroundView"
        android:layout_width="411dp"
        android:layout_height="447dp"
        android:background="#DFDEDE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView"
        app:layout_constraintVertical_bias="0.949" />

    <ImageView
        android:id="@+id/btnLogout"
        android:layout_width="39dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/save_changes"
        android:src="@drawable/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPesananSaya"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:drawablePadding="8dp"
        android:padding="16dp"
        android:text="@string/pesanan_saya"
        app:drawableStartCompat="@drawable/ic_pesanaan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroundView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textViewEditProfile"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:padding="16dp"
        android:text="@string/edit_profile"
        app:drawableStartCompat="@drawable/ic_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPesananSaya" />

    <TextView
        android:id="@+id/textViewPusatInformasi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="8dp"
        android:padding="16dp"
        android:text="@string/pusat_informasi"
        app:drawableStartCompat="@drawable/ic_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewEditProfile" />

    <TextView
        android:id="@+id/textViewSyaratKetentuan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawablePadding="8dp"
        android:padding="16dp"
        android:text="@string/syarat_dan_ketentuan"
        app:drawableStartCompat="@drawable/ic_syarat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewPusatInformasi" />

    <TextView
        android:id="@+id/textViewKebijakanPrivasi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="8dp"
        android:padding="16dp"
        android:text="@string/kebijakan_privasi"
        app:drawableStartCompat="@drawable/ic_privasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSyaratKetentuan" />

</androidx.constraintlayout.widget.ConstraintLayout>
