<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginHorizontal="2dp">

        <ImageView
            android:id="@+id/ivProductImage"
            android:layout_width="92dp"
            android:layout_height="90dp"
            android:contentDescription="@string/product_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.3"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="143dp"
            android:layout_height="24dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/product_name"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.165"
            app:layout_constraintStart_toEndOf="@+id/ivProductImage"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvProductPrice"
            android:layout_width="132dp"
            android:layout_height="26dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/rp"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.152"
            app:layout_constraintStart_toEndOf="@+id/ivProductImage"
            app:layout_constraintTop_toBottomOf="@+id/tvProductName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/quantity"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/tvProductPrice"
            app:layout_constraintTop_toBottomOf="@+id/tvProductPrice" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/one"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
